included dataset that runs without oom

--- a/csh-fut/Makefile
+++ b/csh-fut/Makefile
@@ -7,8 +7,10 @@ benchmark: l2_data.in csh_test.fut
 	futhark bench --backend=opencl csh_test.fut
 l2_data.in:
 	futhark dataset -b -g [1517009][23]i64 -g [1517009][23]i64 --i64-bounds=0:1517008 -g [1517009][16]i64 > l2_data.in
-auto_bug.in:
+auto_bug1.in:
 	futhark dataset -b --i64-bounds=0:262143 -g [2][1517009]i64 -g [2][262144][2]i64 -g [1517009][23]i64 -g 8i64 -g 1913i64 -g 793i64 > auto_bug.in
+auto_bug2.in:
+	futhark dataset -b --i64-bounds=0:26213 -g [2][151463]i64 -g [2][26214][2]i64 -g [151463][23]i64 -g 8i64 -g 191i64 -g 793i64 > auto_bug.in
 setup_pkg:
 	futhark pkg add github.com/diku-dk/sobol
 	futhark pkg add github.com/diku-dk/sorts
